--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,6 +19,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      GIT_USERNAME: "light-mini"
+      GIT_EMAIL: "249068920@qq.com"
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -38,8 +41,8 @@ jobs:
       - name: Set git
         run: |
           sudo apt-get install git
-          git config --global user.name "light-mini"
-          git config --global user.email "249068920@qq.com"
+          git config --global user.name "${GIT_USERNAME}"
+          git config --global user.email "${GIT_EMAIL}"
       # 下载设备树、内核和厂商文件
       - name: Clone vendor trees
         run: |
